# losna-cli

./: .gitignore  LICENSE  README.md  install.ps1  install.sh  main.py  pyproject.toml  requirements.txt  uninstall.ps1  uninstall.sh
skills/code-navigation/: SKILL.MD
skills/file-editing/: SKILL.MD
skills/git-operations/: SKILL.MD
skills/security-review/: SKILL.MD
skills/unit-testing/: SKILL.MD
src/agent/: config.py  db.py  main.py  memory.py  plugin_manager.py  prompts.py  session.py  skills_loader.py  tools.py  ui.py
tests/: test_config.py  test_memory.py
