[project]
name = "losna-cli"
version = "0.1.3"
description = "Losna CLI AI agent assistant"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "prompt-toolkit>=3.0.0",
    "rich>=10.0.0",
    "openrouter>=0.11.0",
    "yfinance>=1.5.0",
    "requests",
]

[project.urls]
Homepage = "https://github.com/snui1s/losna-cli"
Repository = "https://github.com/snui1s/losna-cli"
Issues = "https://github.com/snui1s/losna-cli/issues"

[project.scripts]
losna = "src.agent.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
